# hodl

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  deny.toml
.github/workflows/: ci.yml  pages.yml  release.yml
apps/hodl/: Cargo.toml
apps/hodl/src/: art.txt  main.rs
crates/hodl-chain-bitcoin/: Cargo.toml
crates/hodl-chain-bitcoin/examples/: hodl_tls_smoke.rs
crates/hodl-chain-bitcoin/src/: address.rs  cashaddr.rs  chain.rs  derive.rs  electrum.rs  lib.rs  network.rs  psbt.rs  scan.rs
crates/hodl-chain-ethereum/: Cargo.toml
crates/hodl-chain-ethereum/src/: address.rs  chain.rs  derive.rs  lib.rs  network.rs  rpc.rs  tx.rs
crates/hodl-chain-monero/: Cargo.toml
crates/hodl-chain-monero/src/: address.rs  chain.rs  derive.rs  lib.rs  lws.rs  network.rs  rpc.rs
crates/hodl-config/: Cargo.toml
crates/hodl-config/src/: address_book.rs  config.rs  error.rs  known_hosts.rs  lib.rs
crates/hodl-core/: Cargo.toml
crates/hodl-core/src/: address.rs  amount.rs  chain.rs  chain_trait.rs  error.rs  fee.rs  lib.rs  proxy.rs  tx.rs
crates/hodl-tui/: Cargo.toml
crates/hodl-tui/src/: account.rs  active_chain.rs  address_book.rs  addresses.rs  app.rs  clipboard.rs  format.rs  help.rs  lib.rs  lock.rs  onboarding.rs  receive.rs  retry.rs  scan_cache.rs  send.rs  settings.rs  spinner.rs
crates/hodl-wallet/: Cargo.toml
crates/hodl-wallet/src/: cache.rs  derive.rs  error.rs  lib.rs  mnemonic.rs  storage.rs  vault.rs
pkg/aur/: PKGBUILD-bin.in
web/: index.html
xtask/: Cargo.toml
xtask/src/: main.rs
