[workspace]
resolver = "2"
members = [
    "crates/hodl-core",
    "crates/hodl-tui",
    "crates/hodl-config",
    "crates/hodl-wallet",
    "crates/hodl-chain-bitcoin",
    "crates/hodl-chain-ethereum",
    "crates/hodl-chain-monero",
    "apps/hodl",
    "xtask",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/kryptic-sh/hodl"
homepage = "https://hodl.kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
hjkl-config = "0.2"
hjkl-form = { version = "0.3", features = ["crossterm"] }
hjkl-ratatui = "0.3"
hjkl-picker = "0.3"
hjkl-clipboard = "0.4"
qrcode = "0.14"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
ureq = { version = "2", features = ["json", "socks-proxy"] }
socks = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Light-wallet crypto primitives. Pulled in at workspace level so all
# crates agree on a single version of the secp256k1 / hashing stack.
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
sha2 = "0.10"
ripemd = "0.1"
bip39 = { version = "2", features = ["crate_rand"] }
bip32 = "0.5"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
tempfile = "3"
bech32 = "0.11"
bs58 = { version = "0.5", features = ["check"] }
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
k256 = { version = "0.13", features = ["arithmetic", "ecdsa"] }
tiny-keccak = { version = "2", features = ["keccak"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
base58-monero = "2"

hodl-core = { path = "crates/hodl-core", version = "0.3" }
hodl-tui = { path = "crates/hodl-tui", version = "0.3" }
hodl-config = { path = "crates/hodl-config", version = "0.3" }
hodl-wallet = { path = "crates/hodl-wallet", version = "0.3" }
hodl-chain-bitcoin = { path = "crates/hodl-chain-bitcoin", version = "0.3" }
hodl-chain-ethereum = { path = "crates/hodl-chain-ethereum", version = "0.3" }
hodl-chain-monero = { path = "crates/hodl-chain-monero", version = "0.3" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
