[package]
name = "hodl-chain-bitcoin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
hodl-core.workspace = true
sha2.workspace = true
ripemd.workspace = true
bip32.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
zeroize.workspace = true
bech32 = { workspace = true }
bs58 = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
k256 = { workspace = true }

[dev-dependencies]
hex.workspace = true
