[package]
name = "hodl-chain-monero"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
hodl-core.workspace = true
tracing.workspace = true
bip32.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
zeroize.workspace = true
tiny-keccak.workspace = true
ureq.workspace = true
curve25519-dalek.workspace = true
base58-monero.workspace = true

[dev-dependencies]
hex.workspace = true
