[package]
name = "hodl-wallet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
hodl-core.workspace = true
sha2.workspace = true
ripemd.workspace = true
bip39.workspace = true
bip32.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
hex.workspace = true
zeroize.workspace = true
serde = { workspace = true }
thiserror.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile.workspace = true
hex.workspace = true
